--- a/contact.css
+++ b/contact.css
@@ -4,7 +4,7 @@
   font-family: "montserrat",sans-serif;
 }
 .contact-section{
-  background: url(./bg.png) no-repeat center;
+  background: url(./bg1.png) no-repeat center;
   background-size: cover;
   padding: 40px 0;
 }
